# cpp-project-manager

./: .gitignore  CMakeLists.txt  README.md
init_proj_cmdopt/: init_proj_cmdopt.cpp  init_proj_cmdopt.hpp
src/: main.cpp
src/cmakegen/: cmakegen.cpp  cmakegen.hpp
src/init_proj_cmdopt/: init_proj_cmdopt.cpp
test/: cmakegen_test.cpp
